--- a/README
+++ b/README
@@ -30,7 +30,7 @@ themoviedb python wrapper:
 Code taken from themoviedb
 implemented by dbr/Ben
 
-all the rest is written 2010 by Richard Peng
+all the rest is written 2010 by Richard Peng <dev@richardpeng.com>
 
 ------------------------------------------------------------------------
 
