--- a/README
+++ b/README
@@ -30,21 +30,6 @@ themoviedb python wrapper:
 Code taken from themoviedb
 implemented by dbr/Ben
 
-all the rest is written 2010 by Richard Peng <dev@richardpeng.com>
+all the rest is Copyright (C) 2010 Richard Peng <dev@richardpeng.com>
 
-------------------------------------------------------------------------
-
-LICENSE:
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>.
+Distributed under the GPLv3. See the file COPYING.
